--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-identicons": "^1.2.5",
     "react-router-dom": "^6.22.1",
     "web3": "^4.5.0"
   },
